# ChooChoo

./: .all-contributorsrc  .env_example  .gitignore  404.html  CITATION.cff  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  choochoo-instructor-thread.md  choochoo-student-thread.md  feature_request.md
.github/workflows/: build-status.yml  draft-pdf.yml  fat_controller.yml  plots.yml  test.yml  tutorials.yml
about/: index.html
choochoo/: __init__.py  cli.py  env.py  environment.py  issue.py  issues.py  management.py  objectives.py  paths.py  plot.py  question.py  question_bank.py  repository.py  settings.py  utilities.py
citation/: index.html
commands/: index.html
contributing/: index.html
contributing/development/: index.html
contributing/welcome/: index.html
developers/: index.html
docs/: README.md  citation.md  commands.md  contributing.md  existing.md  index.md  intro.md  notes.md
docs/contributing/: development.md  welcome.md
docs/images/: icon.graffle
docs/includes/: glossary.md
existing/: index.html
instructor/: objectives.yaml  objectives.yml  objectives_header.md  settings.yaml  settings.yml
intro/: index.html
notes/: index.html
paper/: paper.bib  paper.md
pedagogy/: index.html
questions/: 070122_markdown.yml
scripts/: check_instructor_ticket.py  check_student_ticket.py  check_ticket.py  not_instructor_student.py  not_owner.py
search/: search_index.json
tests/: test_repository.py
tools/: index.html
tutorials/: lists.html  lists.ipynb
(+24 files in other folders)
