[metadata]
name = choochoo
author = Lucy Whalley
author_email = l.whalley@northumbria.ac.uk
description = A checklist tool for educators
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: pkg.__version__
url = https://github.com/lucydot/choochoo
project_urls =
    Bug Tracker = https://github.com/lucydot/choochoo/issues
keywords =
  education
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Teaching/Education
  Programming Language :: Python :: 3
  Topic :: Education    
  License :: OSI Approved :: CC BY-SA 4.0
  Operating System :: OS Independent
license_files =
  LICENSE.md

[options]
python_requires >= 3.0.0
packages = choochoo
install_requires =
    matplotlib

[options.extras_require]
tests =
  pytest
dev = 
  flake8

[options.entry_points]
console_scripts =
    choochoo = choochoo.cli:interface
